Complete Phase 0: Foundation and environment setup
This commit finalizes Phase 0 foundation work with Python package structure
and comprehensive development workflow.

Changes:
- Create Python package structure (mlxrunner/__init__.py, cli.py)
- Fix pyproject.toml license format and add pre-commit to dev dependencies
- Update Makefile with improved environment setup and checks
  - Add 'make status' for environment validation
  - Fix 'make setup' to handle existing conda environments
  - Add 'make dev' (Metal only) vs 'make dev-full' (with package install)
  - Fix 'make install-dev' to properly install pre-commit hooks
- Update .gitignore to allow root Makefile while ignoring CMake-generated ones
- Fix .pre-commit-config.yaml to remove unsupported objc/objcxx types
- Add type annotations to CLI functions for mypy compliance
- Update SETUP.md with clearer setup instructions

Phase 0 is now complete with:
✅ Repository structure and build system
✅ Metal shader compilation pipeline
✅ CMake configuration
✅ Python environment management (conda/venv)
✅ Development workflow automation
✅ Pre-commit hooks configured
✅ Validation tests passing

Ready to begin Phase 1: Minimal Inference Core

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,10 @@ htmlcov/
 .dmypy.json
 dmypy.json
 
+# Conda
+condaenv.*.requirements.txt
+.conda/
+
 # Node/React/Frontend
 node_modules/
 npm-debug.log*
