--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ version = "0.1.0"
 description = "High-performance LLM inference engine for Apple Silicon"
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 authors = [
     {name = "MLXR Contributors"}
 ]
@@ -18,7 +18,6 @@ keywords = ["llm", "inference", "mlx", "apple-silicon", "metal"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: C++",
     "Operating System :: MacOS",
@@ -50,6 +49,7 @@ dev = [
     "black>=23.0.0",
     "ruff>=0.1.0",
     "mypy>=1.7.0",
+    "pre-commit>=3.0.0",
 ]
 
 [project.scripts]
