Phase 1: Add SentencePiece tokenizer wrapper
Implements tokenizer abstraction layer with SentencePiece backend:

Changes:
- Add cmake/FindSentencePiece.cmake for library detection
  - Finds SentencePiece via pkg-config or common paths
  - Creates SentencePiece::sentencepiece imported target

- Create core/runtime/tokenizer.h with abstract tokenizer interface
  - Tokenizer base class with encode/decode methods
  - Support for special tokens (BOS, EOS, PAD)
  - Token-to-ID and ID-to-token conversion
  - SentencePieceTokenizer implementation using PIMPL pattern
  - Factory function for creating tokenizers

- Implement core/runtime/tokenizer.cpp
  - SentencePieceProcessor wrapper
  - Error handling for model loading
  - Full encode/decode support
  - Vocabulary access methods

- Update CMakeLists.txt to find SentencePiece
- Update core/CMakeLists.txt to build and link tokenizer

Next: Llama model layers and inference engine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,9 @@ find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 # Find MLX framework
 find_package(MLX REQUIRED)
 
+# Find SentencePiece for tokenization
+find_package(SentencePiece REQUIRED)
+
 # Include directories
 include_directories(${CMAKE_SOURCE_DIR}/core)
 include_directories(${CMAKE_SOURCE_DIR}/daemon)
