Phase 1: Implement complete Llama model layers
Implements full neural network layers for Llama-style transformer models:

Changes:
- Create core/graph/layers.h with comprehensive layer definitions
  - RMSNorm: Root Mean Square Layer Normalization
  - Linear: Fully connected layer with optional bias
  - RotaryEmbedding: RoPE position embeddings
  - Attention: Multi-head self-attention with RoPE
  - MLP: Feed-forward network with SwiGLU activation
  - TransformerBlock: Complete decoder layer with pre-norm

- Implement core/graph/layers.cpp with full functionality
  - RMSNorm: x * rsqrt(mean(x^2) + eps) * weight
  - Linear: y = xW^T + b matrix multiplication
  - RotaryEmbedding:
    - Precompute cos/sin frequency tables
    - Apply rotation to query/key tensors
    - Support position offsets for KV caching
  - Attention:
    - Q, K, V projections
    - RoPE application
    - Scaled dot-product attention
    - Optional attention masking
    - Output projection
  - MLP:
    - SwiGLU activation: swish(gate(x)) * up(x)
    - Gate, up, and down projections
  - TransformerBlock:
    - Pre-norm architecture (Llama-style)
    - Residual connections
    - Attention + MLP sublayers

- Update core/CMakeLists.txt to build layers

All layers follow Llama 2/3 architecture specifications.
Ready for model loader and inference engine implementation.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,9 +3,7 @@
 set(CORE_SOURCES
     # Graph components (MLX integration)
     graph/tensor.cpp
-    # graph/layers.cpp
-    # graph/attention.cpp
-    # graph/mlp.cpp
+    graph/layers.cpp
 
     # Runtime components
     # runtime/engine.cpp
